@@ -1,4 +1,7 @@
 
+2009-03-18 23:29 Ali aliov@xfce.org 
+	 * : Doing hibernate/suspend in a timeout function
+
 2009-03-18 23:15 Ali aliov@xfce.org 
 	 * : Fix a bug in the inhibit interface signal
 
